# vault-tasks

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.claude/skills/build-log/: SKILL.md
.github/workflows/: ci.yml  claude-pr-review.yml  publish.yml
01-journal/2026/: 2026-04-01 2200 PR Review and Hardening.md
50-backlog/: 0001-npm-publish-dry-run-and-first-publish.md  0002-add-github-actions-ci-workflow-for-automated-testing.md  0003-document-or-configure-skill-template-vault-structure-paths.md  0004-add-porter-stemmer-to-tokenizer-if-bm25-recall-complaints.md  0004-evaluate-scriptit-for-gtm-automation-tooling.md
python/: README.md  pyproject.toml
python/vault_tasks/: __main__.py  _version.py
scripts/: build-wheel.mjs
src/: cli.ts  config.ts  counter.ts  frontmatter.ts  index.ts  output.ts  similarity.ts  slugify.ts  store.ts  task.ts  ulid.ts
src/commands/: archive.ts  done.ts  edit.ts  init.ts  install-skills.ts  lint.ts  list.ts  new.ts  search.ts  show.ts  stale.ts  start.ts  tags.ts
src/lint/: collect.ts  index.ts  report.ts  resolve.ts  suggest.ts  types.ts
src/lint/checks/: broken.ts  drift.ts  orphans.ts  stale.ts
src/search/: bm25.ts  index.ts  tokenize.ts  types.ts
src/tests/: bm25.test.ts  cli.test.ts  config.test.ts  counter.test.ts  frontmatter.test.ts  install-skills.test.ts  lint.test.ts  output.test.ts  search.test.ts  similarity.test.ts  slugify.test.ts  store.test.ts  tokenize.test.ts  ulid.test.ts
templates/: backlog.base
templates/rules/: backlog.md
templates/skills/brief/: SKILL.md
templates/skills/build-log/: SKILL.md
templates/skills/lint/: SKILL.md
templates/skills/task/: SKILL.md
templates/skills/weekly-review/: SKILL.md
